# MPVDeck

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  org.mpvdeck.MPVDeck.desktop  org.mpvdeck.MPVDeck.metainfo.xml  org.mpvdeck.MPVDeck.yml
.github/workflows/: ci.yml
docs/: IMPROVEMENTS.md  MPV_OPTIONS.md  PROJECT_OBJECTIVES.md  SettingsViewModel.md
docs-dev/: flathub_submission_checklist.md  flatpak_todo.md
repo/: summary  summary.idx
repo/refs/heads/app/org.mpvdeck.MPVDeck/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/org.mpvdeck.MPVDeck.Debug/x86_64/: master
repo/summaries/: 55a89c9a37633ff66583b625a180a1e95df1efefbad4742c7ef02e89ba6af1f1-0fdb9c6cd12b2ca2260e5c9211ac68340046e29bb98761026a046e6f31121baa.delta  77714dc6e428680ee0d238d6b7512616045f3705cb125a24ac4e6d8dfbd6ca38-0fdb9c6cd12b2ca2260e5c9211ac68340046e29bb98761026a046e6f31121baa.delta  7ac5351fef8703b3a0cdc5d268643a59ba1ef1f5f96882d07a30cf0df067a26c-0fdb9c6cd12b2ca2260e5c9211ac68340046e29bb98761026a046e6f31121baa.delta  bd97929d8f818257d3dd63af847d207e61f813e64cae020a378848dd2a77c270-0fdb9c6cd12b2ca2260e5c9211ac68340046e29bb98761026a046e6f31121baa.delta  c9d24ead6363cea4892e7dc80fdcf12957bb4fe652988c65e40ad31f12345245-0fdb9c6cd12b2ca2260e5c9211ac68340046e29bb98761026a046e6f31121baa.delta  ca1ff419e8668e5d9060ef97136ead5c0828f9e10e98b145b659bd2d2f22cdff-0fdb9c6cd12b2ca2260e5c9211ac68340046e29bb98761026a046e6f31121baa.delta
resources/: defaults.json  mpv_options_descriptions.json  resources.qrc
src/: CMakeLists.txt  Constants.h  MPVDeckApplication.cpp  MPVDeckApplication.h  main.cpp
src/models/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigResult.h
src/utils/: CMakeLists.txt  ColorUtils.cpp  ColorUtils.h  MpvConfHighlighter.cpp  MpvConfHighlighter.h
src/viewmodels/: AudioViewModel.cpp  AudioViewModel.h  CMakeLists.txt  DefaultsLoader.cpp  DefaultsLoader.h  InterfaceOsdViewModel.cpp  InterfaceOsdViewModel.h  OptionBindings.cpp  OptionBindings.h  PerformanceCachingViewModel.cpp  PerformanceCachingViewModel.h  PlaybackBehaviorViewModel.cpp  PlaybackBehaviorViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h  SubtitleViewModel.cpp  SubtitleViewModel.h  VideoViewModel.cpp  VideoViewModel.h
src/views/: CMakeLists.txt  SettingsView.cpp  SettingsView.h
src/views/private/: ControlFactory.h
tests/: CMakeLists.txt  TestConfigManager.cpp  TestDefaultsLoader.cpp  TestOptionBindings.cpp  TestSettingsView.cpp  TestSettingsViewModel.cpp
tools/: clang_tidy_wrapper.py  clean_build_dirs.sh
